--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
-    "mongoose": "^6.6.1"
+    "mongoose": "^6.6.1",
+    "path": "^0.12.7",
+    "pug": "^3.0.2"
   },
   "engines": {
     "node": "16.14.0"
